--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -266,7 +266,7 @@ $answers
 			div.classList.add('comment');
 			div.innerHTML = ' ' + markdown(data.body);
 			if ($rep >= 50) {
-				div.insertBefore(document.getElementById('content').children[1].cloneNode(true), div.firstChild);
+				div.insertBefore(document.getElementById('content').children[2].cloneNode(true), div.firstChild);
 				div.firstChild.firstChild.onclick = upvoteComment;
 				var score = document.createElement('span');
 				score.classList.add('score');
@@ -286,7 +286,11 @@ $answers
 			permalink.appendChild(agot(data.time));
 			permalink.href = '#' + (div.id = 'c' + data.id);
 			sig.appendChild(permalink);
-			div.appendChild(sig);
+			var currentNode = div;
+			while (!sig.parentNode) {
+				if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote') currentNode.appendChild(sig);
+				else currentNode = currentNode.lastChild;
+			}
 			document.getElementById('comments').appendChild(div);
 		} else if (data.event == 'scorechange') {
 			var c = document.getElementById('c' + data.id);
