--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -169,7 +169,8 @@
 		htmle = document.getElementById('html'),
 		css = document.getElementById('css'),
 		js = document.getElementById('js'),
-		save = document.getElementById('save')
+		save = document.getElementById('save'),
+		fork = document.getElementById('fork'),
 		up = document.getElementById('up'),
 		dn = document.getElementById('dn');
 	var p = '';
@@ -185,6 +186,7 @@
 	htmle.onkeypress = function(e) {
 		var oldSelectionStart = this.selectionStart;
 		if (e.keyCode == 13) {
+			if (e.metaKey) return document.getElementById('title').dispatchEvent(new MouseEvent('click'));
 			var tabs = this.value.substr(0, oldSelectionStart)
 				.split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1]
 				.split('\t').length
@@ -237,6 +239,7 @@
 		endChars[93] = ']';
 		endChars[125] = '}';
 		if (e.keyCode == 13) {
+			if (e.metaKey) return document.getElementById('title').dispatchEvent(new MouseEvent('click'));
 			var cut = (this.value.substr(0, oldSelectionStart).match(/\s+$/) || '').length;
 			this.value = this.value.substr(0, oldSelectionStart - cut) + this.value.substr(oldSelectionStart);
 			oldSelectionStart = this.selectionStart = this.selectionEnd = oldSelectionStart - cut;
@@ -282,6 +285,16 @@
 	};
 	htmle.oninput = css.oninput = js.oninput = run;
 	run();
+	addEventListener('keypress', function(e) {
+		if (e.keyCode == 13 &amp;&amp; e.metaKey) {
+			e.preventDefault();
+			document.getElementById('title').dispatchEvent(new MouseEvent('click'));
+		} else if (e.keyCode == 115 &amp;&amp; e.metaKey) {
+			e.preventDefault();
+			var target = e.shiftKey ? fork : save;
+			if (target) target.dispatchEvent(new MouseEvent('click'));
+		}
+	});
 	save.onclick = function() {
 		var e = this;
 		if (e.classList.contains('progress')) return;
