--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -241,7 +241,7 @@ $answers
 	var socket = new WebSocket('wss://' + location.hostname + ':81/q/$id');
 	document.getElementById('comment').onsubmit = function(e) {
 		socket.send(JSON.stringify({
-			event: 'post',
+			event: 'comment',
 			body: document.getElementById('commentta').value
 		}));
 		document.getElementById('commentta').value = '';
@@ -303,7 +303,7 @@ $answers
 	function upvoteComment() {
 		this.classList.toggle('clkd');
 		socket.send(JSON.stringify({
-			event: this.classList.contains('clkd') ? 'vote' : 'unvote',
+			event: this.classList.contains('clkd') ? 'c-vote' : 'c-unvote',
 			id: parseInt(this.parentNode.parentNode.id.substr(1))
 		}));
 	}
