--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -1,4 +1,4 @@
-<h1><span id="title">$lang: $title</span><input id="title-edit" value="$title" hidden="" /></h1>
+<h1><span id="title">$lang: $title</span><input id="title-edit" value="$title" maxlength="144" hidden="" /></h1>
 <div id="question" class="hglt pad br">
 	<div class="ctrl pad lft">
 		<a title="This question is clear, answerable, and useful to the community."><svg class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19" /></svg></a>
@@ -31,11 +31,28 @@
 		</div>
 	</div>
 	<form id="q-edit" class="indt" hidden="">
-		<textarea id="q-desc-edit" rows="24">$rawdesc</textarea>
-		<textarea id="q-code-edit" rows="24" class="umar">$code</textarea>
-		<input type="text" id="q-question-edit" value="$rawq" class="fullwidth bmar" />
+		<div class="bmar">Language: <input type="text" id="lang-edit" value="$lang" required="" /></div>
+		<div id="langsug" hidden="" class="abs"></div>
+		<textarea id="q-desc-edit" rows="24" required="">$rawdesc</textarea>
+		<textarea id="q-code-edit" rows="24" class="umar" required="">$code</textarea>
+		<input type="text" id="q-question-edit" value="$rawq" class="fullwidth bmar" maxlength="144" required="" />
+		<p class="sumar">
+			This question is about
+			<select id="edit-type" name="type">
+				<option value="err">fixing non-working code</option>
+				<option value="bug">unexpected behavior in working code</option>
+				<option value="imp">improving working code</option>
+				<option value="how">how to achieve an end result</option>
+				<option value="alg">algorithms and data structures</option>
+				<option value="pra">techniques and best practices</option>
+				<option value="the">a theoretical scenario</option>
+			</select>
+		</p>
+		<h3 class="nomar">Tags:</h3>
 		<div id="edit-tags">$edit-tags</div>
-		<div>
+		<input type="hidden" id="edit-tags-input" value="$raw-edit-tags" />
+		<p><strong>Edit Comment:</strong> <input type="text" id="q-edit-comment" class="fullwidth" placeholder="explain what you changed and why" maxlength="288" required="" /></p>
+		<div class="bumar">
 			<button type="submit">Submit Edit</button>
 			<button type="reset" id="cancel-edit">Cancel</button>
 		</div>
@@ -96,6 +113,7 @@ $answers
 	.ctrl + * { margin-left: 32px }
 	#q-body { margin-bottom: 8px }
 	.a-content .rit { margin-top: 8px }
+	#q-edit { margin-top: 0 }
 	#q-edit, .a-edit { padding-left: 2px}
 	#q-edit textarea, .a-edit textarea, #answerta {
 		width: 100%;
@@ -107,6 +125,18 @@ $answers
 		width: 100%;
 		padding-left: 4px;
 		margin-bottom: -0.18em;
+	}
+	#langsug {
+		padding: 8px 3px 4px;
+		background: #eee;
+		margin-top: -5px;
+		box-shadow: 1px 3px 3px #444;
+	}
+	#langsug span {
+		cursor: pointer;
+		background: #afa;
+		padding: 2px 6px;
+		box-shadow: 1px 1px 1px #444;
 	}
 	#comments { margin: 8px 0 }
 	code.blk:empty { display: none }
@@ -171,7 +201,7 @@ $answers
 	.comment .up, .comment .dn { width: 18px }
 	#comment:target + #addcomment { display: none }
 	#answer, #answerta { z-index: 1 }
-	#answerta:focus + #answertips #answertips:hover {
+	#answerta:focus + #answertips, #answertips:hover {
 		z-index: 1;
 		opacity: 1;
 		bottom: calc(100% + 12px);
@@ -181,7 +211,6 @@ $answers
 	#answertips {
 		z-index: -1;
 		bottom: calc(100% - 240px);
-		left: 1000%;
 		background: #ffa;
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 		border: 1px solid #888;
@@ -190,6 +219,8 @@ $answers
 	}
 </style>
 <script>
+	var langsug = document.getElementById('langsug'),
+		lang = document.getElementById('lang-edit');
 	function handleLocationUpdate() {
 		var e = document.getElementById(location.hash.substr(1)),
 			f;
@@ -222,6 +253,71 @@ $answers
 	document.getElementById('addcomment').onclick = function() {
 		setTimeout(function() {
 			document.getElementById('commentta').focus();
+		}, 0);
+	};
+	var langs = $langs,
+		waiting = false;
+	lang.addEventListener('keyup', function() {
+		if (!(langsug.hidden = !this.value)) {
+			var firstChild;
+			while (firstChild = langsug.firstChild) langsug.removeChild(firstChild);
+			var i = this.value.length,
+				used = [];
+			while (used.length &lt; 2) {
+				for (var j = 0; j &lt; langs.length; j++) {
+					if (used.indexOf(langs[j]) == -1 &amp;&amp; langs[j].substr(0, i).toLowerCase() == this.value.substr(0, i).toLowerCase()) {
+						used.push(langs[j]);
+						var span = document.createElement('span');
+						span.appendChild(document.createTextNode(langs[j]));
+						span.onmousedown = function(e) {
+							e.preventDefault();
+							lang.value = this.textContent;
+							this.parentNode.hidden = true;
+							findTags();
+						};
+						langsug.appendChild(span);
+						langsug.appendChild(document.createTextNode(' '));
+					}
+				}
+				if (i == 0) return;
+				i--;
+			}
+		}
+	});
+	lang.addEventListener('keydown', function(e) {
+		if (this.value &amp;&amp; e.keyCode == 9) {
+			this.value = langsug.firstChild.textContent;
+			form.onsubmit();
+		}
+	});
+	lang.addEventListener('blur', function() {
+		langsug.hidden = true;
+	});
+	lang.addEventListener('focus', function() {
+		langsug.hidden = !this.value;
+	});
+	document.getElementById('q-edit').onsubmit = function(e) {
+		e.preventDefault();
+		socket.send(JSON.stringify({
+			event: 'q-edit',
+			comment: document.getElementById('q-edit-comment').value,
+			title: document.getElementById('title-edit').value,
+			lang: document.getElementById('lang-edit').value,
+			description: document.getElementById('q-desc-edit').value,
+			question: document.getElementById('q-question-edit').value,
+			code: document.getElementById('q-code-edit').value,
+			type: document.getElementById('edit-type').value,
+			tags: document.getElementById('edit-tags-input').value
+		}));
+	};
+	document.getElementById('edit-tags').onchange = function() {
+		setTimeout(function() {
+			var arr = [],
+				els = tags.querySelectorAll(':checked');
+			for (var i = 0; i &lt; els.length; i++) {
+				arr.push(els[i].id.substr(3));
+			}
+			document.getElementById('edit-tags-input').value = arr.join();
 		}, 0);
 	};
 	document.getElementById('answerform').addEventListener('submit', function(e) {
@@ -261,7 +357,10 @@ $answers
 			console.log(err);
 			return alert('JSON Error. Response was: ' + e.data);
 		}
-		if (data.event == 'add') {
+		if (data.event == 'q-edit') { // TODO: partial page refresh
+			location.hash == '';
+			location.reload();
+		} else if (data.event == 'add') {
 			var div = document.createElement('div');
 			div.classList.add('comment');
 			div.innerHTML = ' ' + markdown(data.body);
