HTML program iframe @ 40% zoom

--- a/html/dev/showhtml.html
+++ b/html/dev/showhtml.html
@@ -1,1 +1,1 @@
-<div><iframe sandbox="allow-scripts" srcdoc="&lt;!DOCTYPE html>&lt;html>&lt;body>$html&lt;style>$css&lt;/style>&lt;script>alert=prompt=confirm=null;$js&lt;/script>&lt;/body>&lt;/html>"></iframe></div>
+<div><iframe sandbox="allow-scripts" srcdoc="&lt;!DOCTYPE html>&lt;html>&lt;body style=&quot;zoom: 0.4&quot;>$html&lt;style>$css&lt;/style>&lt;script>alert=prompt=confirm=null;$js&lt;/script>&lt;/body>&lt;/html>"></iframe></div>
