Fix md-err in code textareas

--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -45,7 +45,7 @@
 	</aside>
 	<fieldset id="step3" class="hide">
 		<h2>Code</h2>
-		<div class="ta-cont">
+		<div class="ta-cont" autocapitalize="none" autocomplete="off" spellcheck="false">
 			<textarea name="code" id="code" placeholder="//code (optional)"></textarea>
 			<pre></pre>
 		</div>
