--- a/html/home.html
+++ b/html/home.html
@@ -28,5 +28,7 @@
 <hr />
 <p class="hglt pad">DevDoodle is a developer network where you can <a href="learn/">learn languages</a>, <a href="dev/">create and share</a> your own programs, and <a href="qa/">ask and answer questions</a>! We're a bit different from other sites - you can visit our <a href="about">about us</a> page to learn more.</p>
 <p class="bumar"><strong>Note:</strong> This site is in beta, so some features might not work correctly or have not been implemented. Issues can be reported on <a href="https://github.com/DevDoodle/DevDoodle-Public">our public github page</a>.</p>
-<h2>Hot Programs</h2>
-<div>$programs</div>
+<section class="lim-programs resp-block">
+	<h2 class="underline">Hot Programs</h2>
+	$programs
+</section>
