Fix 1px-off #code-display bug

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -95,6 +95,7 @@
 	#code-display {
 		width: calc(100% - 4px);
 		border-left: 1px solid #444;
+		padding-right: 1px;
 	}
 	#caret {
 		display: inline-block;
