Fix #234 chat editing

--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -229,10 +229,15 @@ $textarea
 			source[data.id] = data.body;
 			var msg = document.getElementById(data.id);
 			if (!msg) return;
-			var msgCsig = msg.getElementsByClassName('c-sig')[0],
+			var sig = msg.getElementsByClassName('c-sig')[0],
 				msgCtrls = msg.getElementsByClassName('ctrls')[0];
 			msg.innerHTML = (username ? markdown(data.body + ' ').replace(new RegExp('@' + username + '(\\W)', 'g'), '&lt;span class="mention">@' + username + '&lt;/span>$1') : markdown(data.body)).replaceAll('&lt;a', '&lt;a target="_blank"');
-			msg.appendChild(msgCsig);
+			var currentNode = msg;
+			sig.parentNode.removeChild(sig);
+			while (!sig.parentNode) {
+				if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote') currentNode.appendChild(sig);
+				else currentNode = currentNode.lastChild;
+			}
 			msg.appendChild(msgCtrls);
 			if (onBottom) {
 				cont.scrollTop = cont.scrollHeight;
