XMLNS on html-intro-1 lesson

--- a/html/learn/web/html-intro/1.html
+++ b/html/learn/web/html-intro/1.html
@@ -13,7 +13,7 @@ Intro to HTML
 		<div id="cntrls"><a href="../../" class="lft">Back</a> <a href="../2/" class="rit">Next</a></div>
 	</div>
 	<textarea id="html">&lt;!DOCTYPE html>
-&lt;html>
+&lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>
 		&lt;title>This is the document title&lt;/title>
 	&lt;/head>
