Show a bit of #meta on programs

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -251,5 +251,6 @@
 		footerOff = true,
 		noPageOverflow = 400,
 		pageOverflowMobile = true,
+		mainBottomPad = 60,
 		mainContentEl = document.getElementById('main');
 </script>
