--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -165,6 +165,7 @@
 	var footerOff = true,
 		noPageOverflow = 400,
 		pageOverflowMobile = 700,
+		mainBottomPad = 60,
 		mainContentEl = document.getElementById('main'),
 		htmle = document.getElementById('html'),
 		css = document.getElementById('css'),
