--- a/html/a/head.html
+++ b/html/a/head.html
@@ -2,6 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
 		<meta name="viewport" content="initial-scale=1" />
+		<link rel="icon" sizes="any" mask="" href="/a/logosquareoutline.svg" />
+		<meta name="theme-color" content="#000" />
+		<link rel="mask-icon" href="/a/logosquareoutline.svg" color="#000" />
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="stylesheet" href="/a/main.css" />
