--- a/html/learn/web/web.html
+++ b/html/learn/web/web.html
@@ -10,7 +10,7 @@
 				</div>
 				<line class="cline" />
 				<div class="course">
-					<a href="basic-tags/">Basic elements</a>
+					<a href="basic-elements/">Basic elements</a>
 					<div class="description">Get to the basic HTML elements: paragraphs, headings, links, and images.</div>
 				</div>
 				<line class="cline" />
