--- a/html/learn/web/html-intro/2.html
+++ b/html/learn/web/html-intro/2.html
@@ -22,17 +22,22 @@ Using a Doctype - Intro to HTML
 	<iframe id="output"></iframe>
 </div>
 <script>
-	var footerOff = true, noPageOverflow = 520;
+	var footerOff = true,
+		noPageOverflow = 520,
+		htmlTA = document.getElementById('html'),
+		runtTimeout;
 	function run() {
-		document.getElementById('output').src = 'data:application/xhtml+xml; charset=utf-8,' + document.getElementById('html').value;
+		document.getElementById('output').src = 'data:application/xhtml+xml; charset=utf-8,' + htmlTA.value;
 	}
 	run();
-	document.getElementById('html').addEventListener('keyup', run);
-	document.getElementById('html').addEventListener('keydown', run);
-	document.getElementById('html').addEventListener('keypress', function() {
-		setTimeout(run, 0);
-	});
-	function submit() {
+	function beforeRun() {
+		clearTimeout(runTimeout);
+		runTimeout = setTimeout(run, 100);
+	}
+	htmlTA.addEventListener('keyup', beforeRun);
+	htmlTA.addEventListener('keydown', beforeRun);
+	htmlTA.addEventListener('keypress', beforeRun);
+	document.getElementById('check').onclick = function() {
 		if (document.getElementById('html').value.trim().toLowerCase() == '&lt;!doctype html>') {
 			document.getElementById('passed').classList.add('show');
 			document.getElementById('failed').classList.remove('show');
@@ -41,5 +46,5 @@ Using a Doctype - Intro to HTML
 			document.getElementById('passed').classLzist.remove('show');
 		}
 		document.getElementById('text-inner').scrollTop = document.getElementById('text-inner').scrollHeight;
-	}
+	};
 </script>
