--- a/html/learn/web/html-intro/4.html
+++ b/html/learn/web/html-intro/4.html
@@ -25,7 +25,7 @@ Your first webpage - Intro to HTML
 			<h3>How about some content?</h3>
 			<p>As was mentioned before, the paragraph element (<code>&lt;p>&lt;/p></code>) can be put inside the body element and contain paragraph text. Add a paragraph to your document!</p>
 			<p>To move on, write the basic page with a doctype and html, head, and body elements. You may refer to the example above.</p>
-			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
+			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
 				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../5/">Move on →</a></small></h2>
 			</div>
@@ -48,17 +48,22 @@ Your first webpage - Intro to HTML
 	<iframe id="output"></iframe>
 </div>
 <script>
-	var footerOff = true, noPageOverflow = 520;
+	var footerOff = true,
+		noPageOverflow = 520,
+		htmlTA = document.getElementById('html'),
+		runtTimeout;
 	function run() {
-		document.getElementById('output').src = 'data:application/xhtml+xml; charset=utf-8,' + document.getElementById('html').value;
+		document.getElementById('output').src = 'data:application/xhtml+xml; charset=utf-8,' + htmlTA.value;
 	}
 	run();
-	document.getElementById('html').addEventListener('keyup', run);
-	document.getElementById('html').addEventListener('keydown', run);
-	document.getElementById('html').addEventListener('keypress', function() {
-		setTimeout(run, 0);
-	});
-	function submit() {
+	function beforeRun() {
+		clearTimeout(runTimeout);
+		runTimeout = setTimeout(run, 100);
+	}
+	htmlTA.addEventListener('keyup', beforeRun);
+	htmlTA.addEventListener('keydown', beforeRun);
+	htmlTA.addEventListener('keypress', beforeRun);
+	document.getElementById('check').onclick = function() {
 		var doc = new DOMParser().parseFromString(document.getElementById('html').value, 'application/xml');
 		if (doc.getElementsByTagName('head')[0].getElementsByTagName('title').length == 1 &amp;&amp; doc.getElementsByTagName('body')[0].getElementsByTagName('p').length) {
 			document.getElementById('passed').classList.add('show');
@@ -68,5 +73,5 @@ Your first webpage - Intro to HTML
 			document.getElementById('passed').classList.remove('show');
 		}
 		document.getElementById('text-inner').scrollTop = document.getElementById('text-inner').scrollHeight;
-	}
+	};
 </script>
