--- a/html/learn/newlesson.html
+++ b/html/learn/newlesson.html
@@ -1,25 +1,33 @@
 <form action="?preview=1&amp;submit=0" method="POST" class="row">
 	<div id="text">
 		<div id="text-inner">
-			<h1><input type="text" value="$title" name="title" placeholder="Lesson Title" required="" /></h1>
+			<h1><input type="text" value="$title" name="title" placeholder="Lesson Title" autofocus="" required="" /></h1>
 			<h2><input type="text" value="$stitle" name="stitle" placeholder="Section Title" required="" /></h2>
 			<textarea name="sbody" placeholder="Section Content" required="">$sbody</textarea>
-			<input type="text" id="regex-pass" value="$pregex" name="pregex" placeholder="Passing regex" />
-			<input type="text" id="regex-second" value="$sregex" name="sregex" placeholder="Almost-Passing regex" />
-			<input type="text" id="text-second" value="$stext" name="stext" placeholder="Almost-Passing text" />
-			<input type="text" id="text-fail" value="$ftext" name="ftext" placeholder="Failure text" />
+			<h2>JS validator code <small class="nofloat">(<a href="/learn/api/validation" target="_blank">API</a>)</small></h2>
+			<div id="ta-cont">
+				<textarea id="validate" name="validate" autocapitalize="none" autocomplete="off" spellcheck="false">function validate(data) {
+	if (data.indexOf('test') == -1) {
+		return {
+			success: false,
+			msg: 'Did you remember to foo the bar?'
+		};
+	}
+	return {
+		success: true,
+		msg: 'You did it!'
+	};
+}</textarea>
+				<code id="validate-display"></code>
+			</div>
 			<div id="checker">
 				<button type="button" id="check" class="blk">Test User Submit</button>
 				<div id="passed" class="passed clearfix">
-					<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../2/">Move on →</a></small></h2>
+					<h2><span id="passtext"> </span> <small class="rit" style="font-size: 14px; top: 6px;"><a href="../2/">Move on →</a></small></h2>
 				</div>
-				<div id="failed1" class="failed clearfix">
+				<div id="failed" class="failed clearfix">
 					<h2>Try Again</h2>
-					<p id="fail">$md-ftext</p>
-				</div>
-				<div id="failed2" class="failed clearfix">
-					<h2>Almost!</h2>
-					<p id="second">$md-stext</p>
+					<p id="fail"> </p>
 				</div>
 			</div>
 		</div>
@@ -28,46 +36,255 @@
 	<textarea id="html" name="html">$html</textarea>
 	<iframe id="output"></iframe>
 </form>
-<script>
-	var footerOff = true, noPageOverflow = 520;
-	function run() {
-		document.getElementById('output').srcdoc = document.getElementById('html').value;
+<style>
+	#text-inner input, textarea { width: 100% }
+	h1, h2 { border: none }
+	#text-inner h1 { margin: 2px 0 0 }
+	#ta-cont {
+		background: #000;
+		margin-bottom: 8px;
+		position: relative;
+		overflow: auto;
+		border: 1px solid #fff;
 	}
-	run();
-	document.getElementById('html').addEventListener('keyup', run);
-	document.getElementById('html').addEventListener('keydown', run);
-	document.getElementById('html').addEventListener('keypress', function() {
-		setTimeout(run, 0);
-	});
+	#validate, #validate-display {
+		display: block;
+		min-height: 100%;
+		padding: 0;
+		margin: 2px;
+		color: #fff;
+		background: transparent;
+		font-family: monospace;
+		white-space: pre-wrap;
+		word-wrap: break-word;
+		overflow-wrap: break-word;
+		font-size: 1rem;
+		line-height: 1.2;
+		resize: none;
+		outline: none;
+		border: none;
+		padding-left: 4px;
+	}
+	#validate {
+		position: absolute;
+		top: 0; right: 0;
+		z-index: 1;
+		color: transparent;
+	}
+	#validate-display {
+		width: calc(100% - 4px);
+		border-left: 1px solid #444;
+		padding-right: 1px;
+	}
+	#caret {
+		display: inline-block;
+		position: absolute;
+		background: #fff;
+		width: 1px;
+	}
+	#caret[hidden] { display: none }
+	textarea, #ta-cont { height: 400px }
+	#cntrls {
+		padding: 4px;
+		background: #0ff;
+	}
+	#cntrls button {
+		height: 20px;
+		width: 120px;
+	}
+</style>
+<script>
+	var footerOff = true,
+		noPageOverflow = 520,
+		htmlTA = document.getElementById('html'),
+		code = document.getElementById('validate'),
+		codeDisplay = document.getElementById('validate-display'),
+		taCont = document.getElementById('ta-cont');
 	document.getElementById('check').onclick = function(e) {
 		e.preventDefault();
-		if (document.getElementById('html').value.match(new RegExp(document.getElementById('regex-pass').value, 'i'))) {
-			document.getElementById('passed').classList.add('show');
-			document.getElementById('failed1').classList.remove('show');
-			document.getElementById('failed2').classList.remove('show');
-		} else if (document.getElementById('html').value.match(new RegExp(document.getElementById('regex-second').value, 'i'))) {
-			document.getElementById('failed2').classList.add('show');
-			document.getElementById('passed').classList.remove('show');
-			document.getElementById('failed1').classList.remove('show');
-		} else {
-			document.getElementById('failed1').classList.add('show');
-			document.getElementById('failed2').classList.remove('show');
-			document.getElementById('passed').classList.remove('show');
+		var checkerWorker = new Worker(URL.createObjectURL(new Blob([code.value + '\n;onmessage = function(e) { postMessage(validate(e.data)); }'])));
+		checkerWorker.postMessage(htmlTA.value);
+		checkerWorker.onerror = checkerWorker.onmessage = function(e) {
+			if (e instanceof ErrorEvent) alert(e.message);
+			console.log(e);
+			var success = !e || !e.data || e.data.success;
+			var msg = !e || !e.data || typeof(e.data.msg) != 'string' ? 'You did it!' : e.data.msg;
+			document.getElementById(success ? 'passed' : 'failed').classList.add('show');
+			document.getElementById(success ? 'failed' : 'passed').classList.remove('show');
+			document.getElementById(success ? 'passtext' : 'fail').firstChild.nodeValue = msg;
+			checkerWorker.terminate();
+		};
+	};
+	var runTimeout;
+	function run() {
+		document.getElementById('output').src = 'data:application/xhtml+xml; charset=utf-8,' + document.getElementById('html').value;
+	}
+	run();
+	function beforeRun() {
+		clearTimeout(runTimeout);
+		runTimeout = setTimeout(run, 100);
+	}
+	htmlTA.addEventListener('keyup', beforeRun);
+	htmlTA.addEventListener('keydown', beforeRun);
+	htmlTA.addEventListener('keypress', beforeRun);
+	var blinkTimeout;
+	function blink() {
+		document.getElementById('caret').hidden ^= 1;
+		blinkTimeout = setTimeout(blink, 500);
+	}
+	function insertNodeAtPosition(node, refNode, pos) {
+		if (typeof(refNode.nodeValue) == 'string') refNode.parentNode.insertBefore(node, refNode.splitText(pos));
+		else {
+			for (var i = 0; i &lt; refNode.childNodes.length; i++) {
+				var chNode = refNode.childNodes[i];
+				if (chNode.textContent.length &lt;= pos &amp;&amp; i != refNode.childNodes.length - 1) pos -= chNode.textContent.length;
+				else return insertNodeAtPosition(node, chNode, pos);
+			}
 		}
-		document.getElementById('text-inner').scrollTop = document.getElementById('text-inner').scrollHeight;
-	};
-	document.getElementById('text-second').onchange = function() {
-		document.getElementById('second').innerHTML = markdown(this.value);
-	};
-	document.getElementById('text-fail').onchange = function() {
-		document.getElementById('fail').innerHTML = markdown(this.value);
-	};
-	document.getElementById('regex-pass').onchange = function() {
-		document.getElementById('checker').hidden = !this.value;
-	};
+	}
+	code.lastSelectionStart = 0;
+	code.lastSelectionEnd = 0;
+	code.lastCursorPos = 0;
+	code.whichSelection = true;
+	highlight(codeDisplay, code.lastValue = code.value);
+	taCont.className = codeDisplay.className;
+	var caret = document.createElement('span');
+	caret.id = 'caret';
+	caret.appendChild(document.createTextNode('\xA0'));
+	codeDisplay.insertAfter(caret, codeDisplay.firstChild);
+	caret.hidden = true;
+	function handleTAInput() {
+		var codeScrollDiff = code.scrollHeight - code.offsetHeight;
+		if (code.value != code.lastValue) {
+			highlight(codeDisplay, code.lastValue = code.value);
+			taCont.className = codeDisplay.className;
+		}
+		code.style.height = codeDisplay.offsetHeight + 'px';
+		taCont.scrollTop += codeScrollDiff;
+		if (code.selectionStart != code.lastSelectionStart) {
+			code.lastSelectionStart = code.selectionStart;
+			code.whichSelection = false;
+		}
+		if (code.selectionEnd != code.lastSelectionEnd) {
+			code.lastSelectionEnd = code.selectionEnd;
+			code.whichSelection = true;
+		}
+		var cursorPos = code.whichSelection ? code.selectionEnd : code.selectionStart;
+		var oldCaret = document.getElementById('caret');
+		if (cursorPos != code.lastCursorPos || !oldCaret) {
+			code.lastCursorPos = cursorPos;
+			if (oldCaret) oldCaret.parentNode.removeChild(oldCaret);
+			var caret = document.createElement('span');
+			caret.id = 'caret';
+			caret.appendChild(document.createTextNode('\xA0'));
+			insertNodeAtPosition(caret, codeDisplay, cursorPos);
+			clearTimeout(blinkTimeout);
+			blinkTimeout = setTimeout(blink, 500);
+		}
+	}
+	code.addEventListener('keypress', function() {
+		setTimeout(handleTAInput, 0);
+	});
+	code.addEventListener('keyup', function() {
+		setTimeout(handleTAInput, 0);
+	});
+	code.addEventListener('keydown', function() {
+		setTimeout(handleTAInput, 0);
+	});
+	code.addEventListener('mousedown', function() {
+		setTimeout(handleTAInput, 0);
+	});
+	addEventListener('mousemove', function() {
+		setTimeout(handleTAInput, 0);
+	});
+	code.addEventListener('input', handleTAInput);
+	code.addEventListener('blur', function() {
+		document.getElementById('caret').hidden = true;
+		clearTimeout(blinkTimeout);
+	});
+	code.addEventListener('focus', function() {
+		document.getElementById('caret').hidden = false;
+		clearTimeout(blinkTimeout);
+		blinkTimeout = setTimeout(blink, 500);
+	});
+	code.addEventListener('keypress', function(e) {
+		var oldSelectionStart = this.selectionStart;
+		var pairChars = {};
+		pairChars[40] = '()';
+		pairChars[91] = '[]';
+		pairChars[123] = '{}';
+		var endChars = {};
+		endChars[41] = ')';
+		endChars[93] = ']';
+		endChars[125] = '}';
+		if (e.keyCode == 13) {
+			var cut = (this.value.substr(0, oldSelectionStart).match(/(\S([ \t]+)| +)$/) || ['', '', ''])[2].length;
+			this.value = this.value.substr(0, oldSelectionStart - cut) + this.value.substr(oldSelectionStart);
+			oldSelectionStart = this.selectionStart = this.selectionEnd = oldSelectionStart - cut;
+			if (this.value[oldSelectionStart - 1] == ',') this.eIndent = true;
+			var tabs = this.value.substr(0, oldSelectionStart)
+				.split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1]
+				.split('\t').length
+				- (
+					('{([:'.indexOf(this.value[oldSelectionStart - 1]) + 1)
+					? 0
+					: (
+						this.value[oldSelectionStart - 1] == ';' &amp;&amp; this.eIndent
+						? (this.eIndent = false || 2)
+						: 1
+					)
+				);
+			this.value = this.value.substr(0, this.selectionStart) + '\n' + '\t'.repeat(tabs) + (['{}', '()', '[]'].indexOf(this.value.substr(oldSelectionStart - 1, 2)) == -1 ? '' : '\n' + '\t'.repeat(tabs - 1)) + this.value.substr(this.selectionStart);
+			this.selectionEnd = this.selectionStart = ++oldSelectionStart + tabs;
+			e.preventDefault();
+		} else if (e.charCode == 34) {
+			if (this.value[this.selectionStart] != '"') this.value = this.value.substr(0, this.selectionStart) + '""' + this.value.substr(this.selectionStart);
+			this.selectionEnd = this.selectionStart = ++oldSelectionStart;
+			e.preventDefault();
+		} else if (e.charCode == 39) {
+			if (this.value[this.selectionStart] != "'") this.value = this.value.substr(0, this.selectionStart) + "''" + this.value.substr(this.selectionStart);
+			this.selectionEnd = this.selectionStart = ++oldSelectionStart;
+			e.preventDefault();
+		} else if (pairChars[e.keyCode]) {
+			this.value = this.value.substr(0, this.selectionStart) + pairChars[e.keyCode] + this.value.substr(this.selectionStart);
+			this.selectionEnd = ++oldSelectionStart;
+			e.preventDefault();
+		} else if (endChars[e.keyCode] &amp;&amp; this.value[this.selectionStart] == endChars[e.keyCode]) {
+			this.selectionStart = ++this.selectionEnd;
+			e.preventDefault();
+		} else if (e.keyCode == 61 &amp;&amp; this.value.substr(0, this.selectionStart).match(/(draw|refresh) $/)) {
+			var tabs = this.value.substr(0, oldSelectionStart).split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1].split('\t').length;
+			this.value = this.value.substr(0, this.selectionStart) + '= function() {\n' + '\t'.repeat(tabs) + '\n' + '\t'.repeat(tabs - 1) + '};' + this.value.substr(this.selectionStart);
+			this.selectionEnd = this.selectionStart = oldSelectionStart + 15 + tabs;
+			e.preventDefault();
+		} else if (e.keyCode == 44) {
+			this.value = this.value.substr(0, this.selectionStart) + ', ' + this.value.substr(this.selectionStart);
+			this.selectionEnd = this.selectionStart = oldSelectionStart + 2;
+			e.preventDefault();
+		} else if (e.keyCode == 58) {
+			this.value = this.value.substr(0, this.selectionStart) + ': ' + this.value.substr(this.selectionStart);
+			this.selectionEnd = this.selectionStart = oldSelectionStart + 2;
+			e.preventDefault();
+		} else if (e.keyCode == 125 &amp;&amp; this.value[this.selectionStart - 1] == '\t') {
+			this.value = this.value.substr(0, this.selectionStart - 1) + '}' + this.value.substr(this.selectionStart);
+			this.selectionEnd = this.selectionStart = oldSelectionStart;
+			e.preventDefault();
+		}
+	});
+	code.addEventListener('keydown', function(e) {
+		if (e.keyCode == 8 &amp;&amp; this.selectionStart == this.selectionEnd) {
+			if (
+				(this.value[this.selectionStart - 1] == '"' &amp;&amp; this.value[this.selectionStart] == '"') ||
+				(this.value[this.selectionStart - 1] == "'" &amp;&amp; this.value[this.selectionStart] == "'") ||
+				(this.value[this.selectionStart - 1] == '(' &amp;&amp; this.value[this.selectionStart] == ')') ||
+				(this.value[this.selectionStart - 1] == '[' &amp;&amp; this.value[this.selectionStart] == ']') ||
+				(this.value[this.selectionStart - 1] == '{' &amp;&amp; this.value[this.selectionStart] == '}')
+			) {
+				var oldSelectionStart = this.selectionStart;
+				this.value = this.value.substr(0, this.selectionStart - 1) + this.value.substr(this.selectionStart + 1);
+				this.selectionEnd = --oldSelectionStart;
+				e.preventDefault();
+			}
+		}
+	});
 </script>
-<style>
-	input, textarea { width: 100% }
-	h1, h2 { border: none }
-	textarea { height: 400px }
-</style>
