--- a/html/learn/web/html-intro/1.html
+++ b/html/learn/web/html-intro/1.html
@@ -6,7 +6,7 @@ Intro to HTML
 			<h2>What is HTML?</h2>
 			<p>HTML (<b>H</b>yper <b>T</b>ext <b>M</b>arkup <b>L</b>anguage) is the language of web pages. It augments text by adding semantic meaning, organizing bits of text into headers, paragraphs, hyperlinks (text that links to another document), and other elements, and serves as a foundation for other web technologies such as CSS, which provides style, and JavaScript, which enables interactivity.</p>
 			<p>Shown on the right or bottom is a basic HTML file and its output. You don't need to understand it for now - click "next" to learn more.</p>
-			<form action="../../basic-tags/">
+			<form action="../2/">
 				<button id="check" type="submit">Next</button>
 			</form>
 		</div>
