Connection error z-index

--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -732,5 +732,8 @@ $textarea
 		padding: 2px;
 		margin: 0 2px;
 	}
-	.connection-error { position: absolute }
+	.connection-error {
+		position: absolute;
+		z-index: 1;
+	}
 </style>
